language/move-lang/tests/move_check/typing/mutable_eq_and_neq_invalid.exp
error: 

   ┌── tests/move_check/typing/mutable_eq_and_neq_invalid.move:6:17 ───
   │
 6 │         let f = &mut p.b1.f;
   │                 ----------- Field 'f' is still being mutably borrowed by this reference
 7 │         let comp = (&mut p.b1) == (&mut p.b2);
   │                    ^^^^^^^^^^^ Invalid freeze.
   │

error: 

    ┌── tests/move_check/typing/mutable_eq_and_neq_invalid.move:12:17 ───
    │
 12 │         let f = &mut p.b1.f;
    │                 ----------- Field 'f' is still being mutably borrowed by this reference
 13 │         let comp = (&mut p.b1) != (&mut p.b2);
    │                    ^^^^^^^^^^^ Invalid freeze.
    │

